# flood-tide

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README.tpl  features_comb.mk
.cargo/: config
.github/workflows/: test-ubuntu.yml  test.yml
benches/: bench-curl.rs  bench-one.rs  curl.cmd.help.rs.txt  curl.rs  one.rs
docs/: plan.1.md  review.1.md  review.2.md
examples/: bsd-sed.rs  curl.cmd.help.rs.txt  curl.cmd.txt  curl.rs  ffmpeg.rs  gnu-cat.rs  macro_help.rs  macro_verify.rs
specs/: 0-.prompt.md  0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: .lib.rs.swp  check.rs  err.rs  lib.rs  macro_util.rs
tests/: basic.rs  debug.rs  err_debug.rs  err_test.rs  err_test_more.rs  test_long_only.rs  test_macro.rs  test_more1.rs  test_more2.rs  test_subcmd.rs  tokens_long.rs  tokens_other.rs  tokens_short.rs  tokens_single.rs  tokens_subcmd.rs
xbench/: Cargo.toml
xbench/benches/: bench-one.rs  curl.cmd.match.rs.txt  one.rs
xtask/: Cargo.toml
xtask/src/: gen_features_combination.rs  gen_src_example_curl_cmd.rs  main.rs
