[package]
name = "flood-tide"
version = "0.2.11"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = "command line flag and option parse utilities"
keywords = ["parse", "option", "command", "flag", "argument"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.60.0"
repository = "https://github.com/aki-akaguma/flood-tide"

[features]
default = ["plain"]

plain = ["option_argument", "argument", "stop_at_mm"]
plain_subc = ["plain", "subcommand"]
plain_lo = ["plain", "long_only"]
plain_lo_subc = ["plain", "long_only", "subcommand"]

simple_gnu_style = ["plain", "abbreviate"]
simple_gnu_style_subc = ["plain", "abbreviate", "subcommand"]
no_std_plain = ["no_std", "plain"]

dox = []
no_std = []

argument = []
option_argument = []
stop_at_mm = []
subcommand = ["stop_at_free"]

long_only = []
single_error = []
stop_at_free = []

abbreviate = []
optnum_u16 = []
was_long = []

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]

[workspace]
members = [
    "xbench",
    "xtask",
]

[profile.release]
lto = true

[[example]]
name = "gnu-cat"
path = "examples/gnu-cat.rs"
test = true
required-features = ["option_argument", "single_error", "abbreviate", "stop_at_mm", "stop_at_free"]

[[example]]
name = "bsd-sed"
path = "examples/bsd-sed.rs"
test = true
required-features = ["option_argument", "single_error", "stop_at_mm", "stop_at_free"]

[[example]]
name = "ffmpeg"
path = "examples/ffmpeg.rs"
test = true
required-features = ["option_argument", "single_error", "long_only"]

[[example]]
name = "curl"
path = "examples/curl.rs"
test = true
required-features = ["option_argument", "abbreviate", "argument", "stop_at_mm"]
